# mallang

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  SPEC.md  install.sh
docs/: COMPATIBILITY.md  ESCALATION_POLICY.md  HANDOFF.md  MIGRATION_V1.md  REPO_MANIFEST.yaml  ROADMAP.md  SELF_HOSTING.md  STANDARD_LIBRARY.md  TODO_INDEX.md  V1_LANGUAGE_CONTRACT.md  V1_ROADMAP.md  agent-harness.md
examples/: adt.mlg  allocation-accounting.mlg  array-element-borrow.mlg  array-element-methods.mlg  array-for-post.mlg  arrays.mlg  borrow-range-contract.mlg  checked-arithmetic.mlg  closures.mlg  collections-map.mlg  else-if.mlg  field-assignment.mlg  field-borrow.mlg  file-io.mlg  first.mlg  for-clause-initless.mlg  for-clause-prelude.mlg  for-clause.mlg  for-empty-condition.mlg  for-loop.mlg  full-expression-cleanup.mlg  function-values.mlg  generic-enums.mlg  generics.mlg  hello.mlg  if-match-expression.mlg  if-statement.mlg  if.mlg  indexed-field-assignment.mlg  indexed-field-read.mlg  indexed-slice-field-append.mlg  int-division.mlg  logical-operators.mlg  loop-control.mlg  match-arm-prelude.mlg  match-statement.mlg  match-temp.mlg  methods.mlg  mut-parameter-abi.mlg  mut-receiver.mlg  (+28 more)
packaging/: README.md
scripts/: archive-work.sh  build-release-artifact.sh  build-self-hosted-compiler.sh  check-agent-harness-interface.sh  check-allocation-runtime.sh  check-collections-map-runtime.sh  check-diagnostics.sh  check-file-io-runtime.sh  check-formatter.sh  check-generated-c-sanitizers.sh  check-hardening-corpus.sh  check-naming-lint.sh  check-todo-state.py  (+46 more)
(+842 files in other folders)
